@@ -75,3 +75,18 @@ The .getControl() method was sometimes unable to find radio buttons by label.
     >>> browser.getControl('Three').optionValue
     '3'
 
+
+Fragment URLs
+=============
+
+Earlier versions of mechanize used to incorrectly follow links containing
+fragments. We upgraded our dependency to a newer version of mechanize and make
+sure this regression doesn't come back:
+
+    >>> import ClientForm
+    >>> browser.open('http://localhost/@@/testbrowser/fragment.html#asdf')
+    >>> browser.url
+    'http://localhost/@@/testbrowser/fragment.html#asdf'
+    >>> browser.getLink('Follow me')
+    <Link text='Follow me' url='http://localhost/@@/testbrowser/fragment.html#foo'>
+    >>> browser.getLink('Follow me').click()
