@@ -1,0 +1,5 @@
+<html>
+  <body>
+    <a href="http://localhost/@@/testbrowser/fragment.html#foo">Follow me</a>
+  </body>
+</html>
